[package]
name = "lightning-dack-aggregator"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-metrics = { path = "../metrics" }
lightning-utils = { path = "../utils" }
anyhow.workspace = true
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
affair.workspace = true
tracing.workspace = true
resolved-pathbuf.workspace = true
queue-file = "1.4.10"

[dev-dependencies]
lightning-test-utils = { path="../test-utils" }
lightning-signer = { path = "../signer" }
lightning-application = { path = "../application", features = ["test"] }
lightning-notifier = { path = "../notifier" }
infusion.workspace = true
fleek-crypto.workspace = true
