[package]
name = "lightning-dht"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
lightning-application = { path="../application" }
lightning-interfaces = { path="../interfaces" }
lightning-topology = { path="../topology" }
fleek-crypto.workspace = true
serde.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing = "0.1"
