[package]
name = "lightning-dht"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
lightning-interfaces = { path="../interfaces" }
lightning-rep-collector = { path="../rep-collector" }
fleek-crypto.workspace = true
futures.workspace = true
serde.workspace = true
affair.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing = "0.1"
infusion.workspace = true

[dev-dependencies]
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.10"
hex = "0.4"
lightning-application = { path="../application" }
lightning-topology = { path="../topology" }
