[package]
name = "lightning-e2e"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-node = { path = "../node" }
lightning-rpc = { path = "../rpc", features = ["e2e-test"] }
lightning-application = { path = "../application" }
lightning-broadcast = { path = "../broadcast" }
lightning-consensus = { path = "../consensus" }
lightning-notifier = { path = "../notifier" }
lightning-handshake = { path = "../handshake" }
lightning-service-executor = { path = "../service-executor" }
lightning-topology = { path = "../topology" }
lightning-rep-collector = { path = "../rep-collector" }
lightning-signer = { path = "../signer" }
lightning-dht = { path = "../dht" }
lightning-pool = { path = "../pool" }
lightning-blockstore = { path = "../blockstore" }
lightning-blockstore-server = { path = "../blockstore-server" }
lightning-resolver = { path = "../resolver" }
mock = { path = "../mock" }
infusion.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
serde_json.workspace = true
fleek-crypto.workspace = true
resolved-pathbuf.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
rand.workspace = true
hp-fixed.workspace = true
serial_test = "2.0.0"
simplelog = "0.12.1"
log.workspace = true
chrono = "0.4.26"

toml = "0.7"
resolve-path = "0.1.0"
clap = { version = "4.2", features = ["derive"] }
