[package]
name = "lightning-e2e"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-node = { path = "../node" }
lightning-node-bindings = { path = "../node-bindings" }
lightning-rpc = { path = "../rpc" }
lightning-application = { path = "../application" }
lightning-checkpointer.workspace = true
lightning-syncronizer = { path = "../syncronizer" }
lightning-broadcast = { path = "../broadcast" }
lightning-consensus = { path = "../consensus" }
lightning-firewall = { path = "../firewall" }
lightning-notifier = { path = "../notifier" }
lightning-handshake = { path = "../handshake" }
lightning-service-executor = { path = "../service-executor" }
lightning-topology = { path = "../topology" }
lightning-pool = { path = "../pool" }
lightning-rep-collector = { path = "../rep-collector" }
lightning-keystore = { path = "../keystore" }
lightning-signer = { path = "../signer" }
lightning-blockstore = { path = "../blockstore" }
lightning-blockstore-server = { path = "../blockstore-server" }
lightning-resolver = { path = "../resolver" }
lightning-archive = { path = "../archive" }
lightning-pinger = { path = "../pinger" }
lightning-utils = { path = "../utils" }
lightning-test-utils = { path = "../test-utils" }
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
serde_json.workspace = true
fleek-crypto.workspace = true
resolved-pathbuf.workspace = true
reqwest.workspace = true
serde.workspace = true
rand.workspace = true
hp-fixed.workspace = true
serial_test = "3.0.0"
tracing.workspace = true
fleek-blake3 = "1.5"
thiserror.workspace = true

toml = "0.7"
resolve-path = "0.1.0"
clap = { version = "4.2", features = ["derive"] }
lightning-workspace-hack.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
services = ["lightning-node-bindings/services"]
