[package]
name = "lightning-fetcher"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-origin-ipfs = { path = "../origin-ipfs" }
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
affair.workspace = true
log.workspace = true
thiserror = "1.0"

[dev-dependencies]
lightning-blockstore = { path = "../blockstore" }
lightning-origin-ipfs = { path = "../origin-ipfs" }
lightning-resolver = { path = "../resolver" }
lightning-application = { path="../application", features = ["test"] }
lightning-signer = {path="../signer"}
fleek-crypto.workspace = true
lightning-test-utils = { path="../test-utils" }
lightning-broadcast = { path="../broadcast" }
infusion.workspace = true
cid.workspace = true
