[package]
name = "lightning-fetcher"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
blake3-tree = { path = "../../lib/blake3-tree" }
lightning-metrics = { path = "../metrics" }
futures.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
affair.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
thiserror = "1.0"
lightning-workspace-hack.workspace = true

[dev-dependencies]
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-origin-demuxer = { path = "../origin-demuxer" }
lightning-origin-ipfs = { path = "../origin-ipfs" }
lightning-resolver = { path = "../resolver" }
lightning-blockstore-server = { path = "../blockstore-server" }
lightning-pool = { path = "../pool" }
lightning-application = { path = "../application", features = ["test"] }
lightning-signer = { path = "../signer" }
lightning-forwarder = { path = "../forwarder" }
lightning-test-utils = { path = "../test-utils" }
lightning-broadcast = { path = "../broadcast" }
lightning-node.workspace = true
lightning-notifier = { path = "../notifier" }
lightning-topology = { path = "../topology" }
lightning-rep-collector = { path = "../rep-collector" }
fleek-crypto.workspace = true
cid.workspace = true
tempfile.workspace = true
