[package]
name = "lightning-firewall"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.13"
tokio.workspace = true
thiserror.workspace = true
hyper.workspace = true
axum.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
lightning-types.workspace = true
lightning-interfaces = { path = "../interfaces" }