[package]
name = "lightning-forwarder"
version = "0.0.0"
edition = "2021"

[dependencies]
fdi = { path = "../../lib/fdi" }
lightning-interfaces = { path = "../interfaces" }
lightning-utils = { path = "../utils" }
fleek-crypto.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
tracing.workspace = true
affair.workspace = true
rand = "0.8.5"

# These dependencies MUST be pinned to the same versions used by `lightning-consensus`
narwhal-types = { git = "https://github.com/MystenLabs/sui.git", rev = "b06ada015694890d7c46347b13fbc3e9a763513c", package = "narwhal-types" }
tonic = { version = "0.8.3", features = ["transport", "tls"] }

[dev-dependencies]
lightning-test-utils = { path = "../test-utils" }
