[package]
name = "lightning-handshake"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
fn-sdk = { path = "../../lib/sdk" }
log.workspace = true
anyhow.workspace = true
serde.workspace = true
infusion.workspace = true
affair.workspace = true
fleek-crypto.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
bytes = "1.4"
arrayref = "0.3"
arrayvec = "0.7"
dashmap = "5.5"
ahash = "0.8"
fxhash = "0.2"
derive_more = "0.99"
enum_dispatch = "0.3.12"
triomphe = "0.1.9"
smallvec = "1.11"
heapless = "0.7.16"
axum = "0.6"
webrtc = "0.9.0"
wtransport = { git = "https://github.com/kckeiks/wtransport.git", branch = "lightning-wtransport", features = ["dangerous-configuration"] }
rand = "0.8"
rcgen = "0.11"
ring = "0.16"
time = "0.3"
tower = "0.4"
tower-http = { version = "0.4.4", features = ["cors"] }
hyper = "0.14"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }
affair.workspace = true
lightning-node = { path = "../node" } # for TomlConfigProvider
lightning-cli = { path = "../cli" }
lightning-service-executor = { path = "../service-executor" }
lightning-signer = { path = "../signer" }
lightning-blockstore = { path = "../blockstore/" }
serde_json.workspace = true
lightning-test-utils = { path = "../test-utils" }
