[package]
name = "lightning-handshake"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-schema = { path = "../schema" }
fn-sdk = { path = "../../lib/sdk" }
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
infusion.workspace = true
fleek-crypto.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream.workspace = true
bytes = "1.4"
arrayref = "0.3"
dashmap = "5.5"
fxhash = "0.2"
derive_more = "0.99"
enum_dispatch = "0.3.12"
triomphe = "0.1.9"
smallvec = "1.11"
axum = { version = "0.7", features = ["macros"]}
str0m = "0.4.1"
wtransport = { version = "0.1.9", features = ["dangerous-configuration"] }
rand = "0.8"
rcgen = "0.11"
ring = "0.16"
time = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "0.14"
async-channel = "1.9.0"
stunclient = "0.4"
base64 = "0.21"
fleek-service-js-poc = { path = "../../services/js-poc" }
serde_json.workspace = true

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports", "async_tokio"] }
affair.workspace = true
lightning-node = { path = "../node" } # for TomlConfigProvider
lightning-cli = { path = "../cli" }
lightning-signer = { path = "../signer" }
lightning-rpc = { path = "../rpc" }
lightning-service-executor = { path = "../service-executor" }
lightning-blockstore = { path = "../blockstore/" }
lightning-test-utils = { path = "../test-utils" }
mock = { path = "../mock" }
clap = { version = "4.4.6", features = ["derive"] }
bincode = "1.3"

[[bench]]
name = "mock"
harness = false
