[package]
name = "lightning-handshake"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-metrics = { path = "../metrics" }
fn-sdk = { path = "../../lib/sdk" }
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
fleek-crypto.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream.workspace = true
bytes = "1.4"
arrayref = "0.3"
dashmap = "5.5"
fxhash = "0.2"
derive_more = "0.99"
enum_dispatch = "0.3.12"
triomphe = "0.1.9"
smallvec = "1.11"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
str0m = "0.4.1"
wtransport = { version = "0.1.9", features = ["dangerous-configuration"] }
rand = "0.8"
rcgen = "0.11"
resolved-pathbuf.workspace = true
ring = "0.16"
time = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
hyper = "0.14"
async-channel = "1.9.0"
stunclient = "0.4"
base64.workspace = true
serde_json.workspace = true
cid.workspace = true
hex = "0.4"
url = { version = "2.5.0", features = ["serde"] }
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports", "async_tokio"] }
affair.workspace = true
lightning-signer = { path = "../signer" }
lightning-rpc = { path = "../rpc" }
lightning-service-executor = { path = "../service-executor" }
lightning-blockstore = { path = "../blockstore/" }
lightning-test-utils = { path = "../test-utils" }
clap = { version = "4.4.6", features = ["derive"] }
bincode = "1.3"

[[bench]]
name = "mock"
harness = false
