[package]
name = "lightning-indexer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
fleek-crypto = { path = "../../lib/fleek-crypto" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

lightning-interfaces = { path = "../interfaces" }
lightning-workspace-hack.workspace = true

[dev-dependencies]
lightning-test-utils = { path = "../test-utils" }
lightning-signer = { path = "../signer" }
lightning-application = { path = "../application", features = ["test"] }
lightning-rep-collector = { path = "../rep-collector" }
lightning-node.workspace = true
lightning-notifier = { path = "../notifier" }
tempfile.workspace = true
