[package]
name = "lightning-interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infusion.workspace = true
anyhow.workspace = true
serde.workspace = true
serde-big-array.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
thiserror.workspace = true
zeroize.workspace = true

# Our libraries
lightning-schema = { path = "../schema/" }
lightning-types.workspace = true
affair.workspace = true
atomo.workspace = true
fleek-crypto.workspace = true
hp-fixed.workspace = true
ink-quill.workspace = true
blake3-tree = { path = "../../lib/blake3-tree"}

[features]
e2e-test = []
