[package]
name = "lightning-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
fdi = { path = "../../lib/fdi" }
interfaces-proc = { path = "./proc" }

ethers.workspace = true
anyhow.workspace = true
serde.workspace = true
serde-big-array.workspace = true
trait-variant = "0.1"
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
thiserror.workspace = true
zeroize.workspace = true
tracing.workspace = true
schemars.workspace = true
triomphe.workspace = true

# Our libraries
lightning-schema = { path = "../schema/" }
lightning-types.workspace = true
affair.workspace = true
atomo.workspace = true
atomo-rocks.workspace = true
fleek-crypto.workspace = true
hp-fixed.workspace = true
ink-quill.workspace = true
blake3-tree = { path = "../../lib/blake3-tree" }
better-shutdown.workspace = true
merklize.workspace = true
ready.workspace = true

# Currently we need the SDK because of the FFI types.
fn-sdk = { path = "../../lib/sdk" }
lightning-workspace-hack.workspace = true

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
dummy-waker = "1.1.0"
