[package]
name = "lightning-metrics"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
autometrics = { workspace = true, features = ["prometheus"] }
axum.workspace = true
dashmap = "5.5.0"
tracing.workspace = true
once_cell = "1.18.0"
prometheus = "0.13.3"
stdext = "0.3.1"
tokio.workspace = true
