[package]
name = "mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = {path="../interfaces"}
async-trait.workspace = true
fleek-crypto.workspace = true
affair.workspace = true
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
scc.workspace = true
hp-fixed.workspace = true

axum.workspace = true
serde_json.workspace = true
log.workspace = true
rand_distr = "0.4.3"
rand_chacha = "0.3"

# Mock Connection Pool
lightning-schema = {path="../schema"}
dashmap = "5.5.0"
futures.workspace = true

[dev-dependencies]
lightning-application = { path = "../application" }
lightning-signer = { path = "../signer" }
