[package]
name = "lightning-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-application = { path = "../application" }
lightning-archive = { path = "../archive" }
lightning-blockstore = { path = "../blockstore" }
lightning-blockstore-server = { path = "../blockstore-server" }
lightning-broadcast = { path = "../broadcast" }
lightning-consensus = { path = "../consensus" }
lightning-fetcher = { path = "../fetcher" }
lightning-handshake = { path = "../handshake" }
lightning-indexer = { path = "../indexer" }
lightning-interfaces = { path = "../interfaces" }
lightning-notifier = { path = "../notifier" }
lightning-origin-demuxer = { path = "../origin-demuxer" }
lightning-pool = { path = "../pool" }
lightning-rep-collector = { path = "../rep-collector" }
lightning-resolver = { path = "../resolver" }
lightning-rpc = { path = "../rpc" }
lightning-service-executor = { path = "../service-executor" }
lightning-keystore = { path = "../keystore" }
lightning-signer = { path = "../signer" }
lightning-syncronizer = { path = "../syncronizer" }
lightning-topology = { path = "../topology" }
lightning-pinger = { path = "../pinger" }
mock = { path = "../mock" }
toml = "0.7"
infusion.workspace = true
anyhow.workspace = true
resolved-pathbuf.workspace = true
tracing.workspace = true

[features]
default = []
# Opt-in for compiling services directly inside the node
services = [ "lightning-service-executor/services" ]
