[package]
name = "lightning-notifier"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
lightning-utils = { path = "../utils" }
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }

[dev-dependencies]
lightning-application = { path = "../application", features = ["test"] }
