[package]
name = "lightning-origin-demuxer"
version = "0.0.0"
edition = "2021"

[dependencies]
affair.workspace = true
anyhow.workspace = true
derive_more = "0.99"
lightning-interfaces = { path = "../interfaces" }
lightning-origin-ipfs = { path = "../origin-ipfs" }
lightning-origin-http = { path = "../origin-http" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
fleek-crypto.workspace = true
infusion.workspace = true
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-signer = { path = "../signer" }
lightning-test-utils = { path = "../test-utils" }
cid.workspace = true
