[package]
name = "lightning-origin-http"
version = "0.0.0"
edition = "2021"

[dependencies]
affair.workspace = true
anyhow.workspace = true
fast-sri = { path = "../../lib/fast-sri" }
lightning-interfaces = { path = "../interfaces" }
reqwest = "0.11"
serde.workspace = true
url = "2.5.0"

[dev-dependencies]
fleek-crypto.workspace = true
infusion.workspace = true
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-signer = { path = "../signer" }
lightning-test-utils = { path = "../test-utils" }
tokio.workspace = true
