[package]
name = "lightning-origin-http"
version = "0.0.0"
edition = "2021"

[dependencies]
affair.workspace = true
anyhow.workspace = true
fast-sri = { path = "../../lib/fast-sri" }
lightning-interfaces = { path = "../interfaces" }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde.workspace = true
url = "2.5.0"
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }

[dev-dependencies]
fleek-crypto.workspace = true
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-signer = { path = "../signer" }
lightning-test-utils = { path = "../test-utils" }
tokio.workspace = true
