[package]
name = "lightning-origin-http"
version = "0.0.0"
edition = "2021"

[dependencies]
affair.workspace = true
anyhow.workspace = true
b3fs.workspace = true
fast-sri = { path = "../../lib/fast-sri" }
lightning-interfaces = { path = "../interfaces" }
lightning-workspace-hack.workspace = true
reqwest.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
fleek-crypto.workspace = true
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-signer = { path = "../signer" }
lightning-test-utils = { path = "../test-utils" }
lightning-node.workspace = true
tempfile.workspace = true
tokio.workspace = true
