[package]
name = "lightning-origin-ipfs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-interfaces = { path = "../interfaces" }
anyhow.workspace = true
serde.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
async-trait.workspace = true
cid.workspace = true
multihash.workspace = true
tokio.workspace = true
futures.workspace = true
hyper = { version = "0.14.27", features = ["stream"]}
rustls = "0.21.5"
hyper-rustls = "0.24.1"
affair.workspace = true


[dev-dependencies]
tokio-util = {version = "0.7.8", features = ["io"]}
lightning-test-utils = { path = "../test-utils" }
