[package]
name = "lightning-origin-ipfs"
version = "0.0.0"
edition = "2021"

[dependencies]
lightning-interfaces = { path = "../interfaces" }
fleek-ipld.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
cid.workspace = true
multihash.workspace = true
tokio.workspace = true
futures.workspace = true
hyper = { version = "0.14.27", features = ["stream"] }
rustls = "0.21.5"
hyper-rustls = "0.24.1"
affair.workspace = true
tokio-util = { version = "0.7.8", features = ["io"] }
tracing.workspace = true
unsigned-varint = { version = "0.8", features = ["std"] }
libipld = { version = "0.16", features = ["dag-cbor", "derive"] }
thiserror = "1"
workspace-hack = { version = "0.1", path = "../../etc/workspace-hack" }

[dev-dependencies]
fleek-crypto.workspace = true
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-signer = { path = "../signer" }
lightning-test-utils = { path = "../test-utils" }
