[package]
name = "lightning-origin-ipfs"
version = "0.0.0"
edition = "2021"

[dependencies]
affair.workspace = true
anyhow.workspace = true
b3fs.workspace = true
bytes.workspace = true
cid.workspace = true
fleek-ipld.workspace = true
futures.workspace = true
humantime-serde.workspace = true
hyper = { version = "0.14.27", features = ["stream"] }
hyper-rustls = "0.24.1"
lightning-interfaces = { path = "../interfaces" }
lightning-workspace-hack.workspace = true
multihash.workspace = true
rustls = "0.21.5"
serde.workspace = true
thiserror = "1"
tokio-stream.workspace = true
tokio-util = { version = "0.7.8", features = ["io"] }
tokio.workspace = true
tracing.workspace = true
unsigned-varint = { version = "0.8", features = ["std"] }

[dev-dependencies]
fleek-crypto.workspace = true
lightning-application = { path = "../application", features = ["test"] }
lightning-blockstore = { path = "../blockstore" }
lightning-indexer = { path = "../indexer" }
lightning-signer = { path = "../signer" }
lightning-test-utils = { path = "../test-utils" }
lightning-node.workspace = true
tempfile.workspace = true
